[package]
name = "overlord"
version = "0.3.0-alpha.0"
authors = ["Cencen Wan <wancencen@cryptape.com>", "Eason Gao <kaoimin@qq.com>"]
edition = "2018"
license = "MIT"
include = ["Cargo.toml", "src/*", "README.md", "LICENSE", "rust-toolchain"]
readme = "README.md"
keywords = ["consensus", "bft", "distributed-systems"]
categories = ["algorithms"]
repository = "https://github.com/cryptape/overlord"
description = """
Overlord consensus procotol.
"""

[dependencies]
async-trait = "0.1"
bit-vec = "0.6"
creep = "0.2"
log = "0.4"
hex = "0.4"
ophelia = "0.2"
lazy_static = "1.4"
ophelia-bls-amcl = "0.1"
parking_lot = "0.10"
prime_tools = "0.2"
derive_more = "0.99"
futures-timer = "3.0"
rlp = "0.4"
rand = "0.7"
bincode = "1.2"
serde_json = "1.0"
serde_derive = "1.0"
ophelia-secp256k1 = "0.2"
bytes = { version = "0.5", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
hasher = { version = "0.1", features = ['hash-keccak'] }
futures = { version = "0.3", features = [ "async-await" ] }
tentacle-secio = { version = "0.1", features = [ "flatc" ] }
tokio = { version = "0.2", features = ["macros", "rt-core", "rt-threaded"]}

[dev-dependencies]
chrono = "0.4"
env_logger = "0.7"

[features]
default = []
random_leader = []
