[package]
name = "overlord"
version = "0.2.0"
authors = ["Eason Gao <kaoimin@qq.com>"]
edition = "2018"
license = "MIT"
include = ["Cargo.toml", "src/*", "README.md", "LICENSE", "rust-toolchain"]
readme = "README.md"
keywords = ["consensus", "bft", "distributed-systems"]
categories = ["algorithms"]
repository = "https://github.com/cryptape/overlord"
description = """
Overlord consensus procotol.
"""

[dependencies]
async-trait = "0.1"
bit-vec = "0.6"
bytes = { version = "0.5", features = ["serde"] }
creep = "0.2"
derive_more = "0.99"
futures = { version = "0.3", features = [ "async-await" ] }
futures-timer = "3.0"
hex = "0.4"
log = "0.4"
muta-apm = "0.1.0-alpha.15"
parking_lot = "0.10"
prime_tools = "0.2"
rand_core = "0.5"
rand_pcg = "0.2"
rlp = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
tokio = { version = "0.2", features = ["macros", "rt-core", "rt-threaded"]}

[dev-dependencies]
bincode = "1.3"
blake2b_simd = "0.5"
crossbeam-channel = "0.4"
env_logger = "0.7"
hasher = { version = "0.1", features = ['hash-keccak'] }
lazy_static = "1.4"
lru-cache = "0.1"
rand = "0.7"
serde_json = "1.0"

[features]
default = []
random_leader = []
