[package]
name = "overlord"
version = "0.4.0"
authors = ["Eason Gao <kaoimin@qq.com>"]
edition = "2021"
license = "MIT"
include = ["src/*", "README.md", "LICENSE", "rust-toolchain"]
readme = "README.md"
keywords = ["consensus", "bft", "distributed-systems"]
categories = ["algorithms"]
repository = "https://github.com/cryptape/overlord"
description = """
Overlord consensus procotol.
"""

[dependencies]
async-trait = "0.1"
bit-vec = "0.6"
bytes = { version = "1.1", features = ["serde"] }
creep = "0.2"
derive_more = "0.99"
futures = { version = "0.3", features = [ "async-await" ] }
hummer = "0.1"
log = "0.4"
muta-apm = "0.1"
parking_lot = "0.12"
prime_tools = "0.3"
rand_core = "0.6"
rand_pcg = "0.3"
rlp = "0.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.19", features = ["macros", "rt-multi-thread", "time"] }

[dev-dependencies]
bincode = "1.3"
blake2b_simd = "1.0"
crossbeam-channel = "0.5"
env_logger = "0.9"
hasher = { version = "0.1", features = ['hash-keccak'] }
lazy_static = "1.4"
lru-cache = "0.1"
rand = "0.7"
serde_json = "1.0"

[features]
default = []
random_leader = []
